added main contents of header with navbar links pointing to different sections

--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/ace4380aab.js" crossorigin="anonymous"></script>
     <title>Shawn Wilson</title>
 </head>
 <body>
+<div id="wrapper">
+    <div id="main">
+        <div class="inner">
+            <header id="header">
+                <h1>Shawn Wilson</h1>
+                <h2>Full-Stack Software Developer</h2>
+                <nav>
+                    <ul>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="scroll-down">
+                    <a id="arrow-container" href="#portfolio">
+                        <i id="arrow" class="fa-sharp fa-solid fa-arrow-down fa-bounce"></i>
+                    </a>
+                </div>
+            </header>
 
+
+        </div>
+    </div>
+</div>
+<script src="assets/js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 </body>
 </html>
