added sections and styled header

--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
                     </a>
                 </div>
             </header>
+            <section id="portfolio">
+                <!-- Portfolio content here -->
+            </section>
 
+            <section id="about">
+                <!-- About me content here -->
+            </section>
 
+            <section id="contact">
+                <!-- Contact content here -->
+            </section>
         </div>
     </div>
 </div>
