--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/ace4380aab.js" crossorigin="anonymous"></script>
     <title>Shawn Wilson</title>
@@ -30,21 +31,53 @@
                 </div>
             </header>
             <section id="portfolio">
-                <!-- Portfolio content here -->
+                <div class="container">
+                    <h1 class="text-center mb-5">Portfolio</h1>
+                    <div class="row">
+                        <!-- Portfolio item 1 -->
+                        <div class="col-md-4 col-sm-12">
+                            <article class="item">
+                                <h3>Sandlot Connect</h3>
+                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
+                            </article>
+                        </div>
+                        <!-- Portfolio item 2 -->
+                        <div class="col-md-4 col-sm-12">
+                                    <article class="item">
+                                        <h3>Movie Project</h3>
+                                        <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
+                                    </article>
+                        </div>
+                        <!-- Portfolio item 3 -->
+                        <div class="col-md-4 col-sm-12">
+                            <article class="item">
+                                <h3>Weather Map</h3>
+                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
+                            </article>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="about">
-                <!-- About me content here -->
+                <p></p>
             </section>
 
             <section id="contact">
                 <!-- Contact content here -->
             </section>
+
+            <footer id="footer">
+                <ul>
+                    <li>Shawn Wilson 2023.</li>
+                </ul>
+            </footer>
         </div>
     </div>
 </div>
-<script src="assets/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
