added some filler content to about section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             </section>
 
             <section id="about">
-                <p></p>
+                <h1>About Me</h1>
+                <p>Hi, I'm Shawn Wilson.
+                    <br>
+                    I'm a passionate Full-Stack Software Developer and Army veteran. Tech has always been a passion for me. I enjoy working with various technologies and am never afraid of a new challenge. Feel free to browse my portfolio to see some of the projects I've worked on. If you have any questions or would like to discuss potential collaborations, please don't hesitate to reach out through the Contact section.</p>
             </section>
 
             <section id="contact">
