--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/ace4380aab.js" crossorigin="anonymous"></script>
     <title>Shawn Wilson</title>
@@ -15,44 +16,49 @@
     <div id="main">
         <div class="inner">
             <header id="header">
-                <h1>Shawn Wilson</h1>
-                <h2>Full-Stack Software Developer</h2>
-                <nav>
-                    <ul>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-                <div class="scroll-down">
-                    <a id="arrow-container" href="#portfolio">
-                        <i id="arrow" class="fa-sharp fa-solid fa-arrow-down fa-bounce"></i>
-                    </a>
+                <div class="container container-background p-4">
+                    <h1>Shawn Wilson</h1>
+                    <h2>Full-Stack Software Developer</h2>
+                    <nav>
+                        <ul>
+                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </nav>
                 </div>
+                    <div class="scroll-down">
+                        <a id="arrow-container" href="#portfolio">
+                            <i id="arrow" class="fa-sharp fa-solid fa-arrow-down fa-bounce"></i>
+                        </a>
+                    </div>
             </header>
             <section id="portfolio">
-                <div class="container">
+                <div class="container container-background p-4">
                     <h1 class="text-center mb-5">Portfolio</h1>
                     <div class="row">
                         <!-- Portfolio item 1 -->
                         <div class="col-md-4 col-sm-12">
                             <article class="item">
                                 <h3>Sandlot Connect</h3>
-                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
+                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG"
+                                                               alt="Sandlot Connect Capstone Project"></a>
                             </article>
                         </div>
                         <!-- Portfolio item 2 -->
                         <div class="col-md-4 col-sm-12">
-                                    <article class="item">
-                                        <h3>Movie Project</h3>
-                                        <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
-                                    </article>
+                            <article class="item">
+                                <h3>Movie Project</h3>
+                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG"
+                                                               alt="Sandlot Connect Capstone Project"></a>
+                            </article>
                         </div>
                         <!-- Portfolio item 3 -->
                         <div class="col-md-4 col-sm-12">
                             <article class="item">
                                 <h3>Weather Map</h3>
-                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG" alt="Sandlot Connect Capstone Project"></a>
+                                <a href="#" class="image"><img src="assets/images/sandlot_connect.JPG"
+                                                               alt="Sandlot Connect Capstone Project"></a>
                             </article>
                         </div>
                     </div>
@@ -60,27 +66,60 @@
             </section>
 
             <section id="about">
-                <h1>About Me</h1>
-                <p>Hi, I'm Shawn Wilson.
-                    <br>
-                    I'm a passionate Full-Stack Software Developer and Army veteran. Tech has always been a passion for me. I enjoy working with various technologies and am never afraid of a new challenge. Feel free to browse my portfolio to see some of the projects I've worked on. If you have any questions or would like to discuss potential collaborations, please don't hesitate to reach out through the Contact section.</p>
+                <div class="container container-background p-4">
+                    <h1>About Me</h1>
+                    <p>Hi, I'm Shawn Wilson.
+                        <br>
+                        I'm a Full-Stack Software Developer and Army veteran. Tech has always been a passion for me. I
+                        enjoy working with various technologies and am never afraid of a new challenge. Feel free to
+                        browse my portfolio to see some of the projects I've worked on. If you have any questions or
+                        would like to discuss potential collaborations, please don't hesitate to reach out through the
+                        Contact section.
+                    </p>
+                    <div class="icon-container">
+                        <i class="fab fa-java icon" title="Java" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fab fa-js icon" title="JavaScript" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fab fa-html5 icon" title="HTML5" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fab fa-css3-alt icon" title="CSS3" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fas fa-leaf icon" title="Spring" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fa-brands fa-linux icon" title="Linux" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fa-brands fa-git-alt icon" title="Git" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fa-brands fa-aws icon" title="AWS" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fa-solid fa-database icon" title="SQL" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                        <i class="fa-brands fa-trello icon" title="Trello" data-bs-toggle="tooltip"
+                           data-bs-placement="bottom"></i>
+                    </div>
+                </div>
             </section>
 
             <section id="contact">
                 <!-- Contact content here -->
             </section>
 
-            <footer id="footer">
-                <ul>
-                    <li>Shawn Wilson 2023.</li>
-                </ul>
+            <footer id="footer" class="d-flex justify-content-center">
+                <div class="d-flex align-items-center">
+                    <ul class="p-0 m-0">
+                        <li>Shawn Wilson 2023.</li>
+                    </ul>
+                </div>
             </footer>
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
