changed contact button. removed scroll function

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 </div>
             </section>
 
-            <section id="about" class="parent">
-                <div class="container container-background p-4">
+            <section id="about" class="parent mb-5">
+                <div class="container container-background p-4 mb-5">
                     <h1 class="text-center mb-4">About Me</h1>
                     <p class="text-center">Hi, I'm Shawn Wilson.</p>
                     <p>
@@ -117,7 +117,7 @@
             <section id="contact" class="parent" style="min-height: 95vh;">
                 <div class="container container-background p-4">
                     <h1 class="text-center mb-4">Contact</h1>
-                    <p>You can visit my social links below to learn more about me. Email me directly by clicking the red message button on the bottom right.</p>
+                    <p>You can visit my social links below to learn more about me. Message me directly by clicking the red message button icon on the bottom right of the screen.</p>
                     <div class="icon-container">
                         <a class="text-white" href="https://www.linkedin.com/in/shawnbwilson/" rel="noreferrer" target="_blank">
                             <i class="fa-brands fa-linkedin icon" title="Linkedin" data-bs-toggle="tooltip"
@@ -152,30 +152,5 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
-<script>
-    let sections = document.querySelectorAll('.parent');
-    let scrollResistance = false;
-    console.log(sections)
-
-    function handleScroll() {
-        if (scrollResistance) {
-            return;
-        }
-
-        sections.forEach((section) => {
-            const sectionBottom = section.getBoundingClientRect().bottom;
-            const sectionContent = section.getBoundingClientRect().height;
-            const resistanceThreshold = 1000; // Adjust this value to control the resistance
-            if (sectionBottom > 0 && sectionBottom < resistanceThreshold || sectionContent > 0 && sectionContent < resistanceThreshold) {
-                scrollResistance = true;
-                setTimeout(() => {
-                    scrollResistance = false;
-                }, 500); // Adjust the duration of the resistance effect
-            }
-        });
-    }
-
-    document.addEventListener('scroll', handleScroll, { passive: true });
-</script>
 </body>
 </html>
