--- a/index.html
+++ b/index.html
@@ -39,32 +39,59 @@
                     <h1 class="text-center mb-4">Portfolio</h1>
                     <div class="row portfolio-items-container">
                         <!-- Portfolio item 1 -->
-                        <div class="col-md-4 col-sm-12 d-flex portfolio-item">
+                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
                             <article class="item">
                                 <h3>Sandlot Connect</h3>
                                 <div class="h-100 pb-5">
-                                <a href="#" class="image"><img class="h-100" src="assets/images/sandlot_connect.JPG"
-                                                               alt="Sandlot Connect Capstone Project"></a>
+                                    <a href="#" class="image">
+                                        <img class="h-100" src="assets/images/sandlot_connect.JPG"
+                                             alt="Sandlot Connect Capstone Project"></a>
+                                </div>
+                                <!-- Hidden/click to show -->
+                                <div class="portfolio-info" style="display:none;">
+                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
+                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
+                                    saepe temporibus veniam. Consectetur dolores in repellat?
+                                    <br>
+                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
                                 </div>
                             </article>
                         </div>
                         <!-- Portfolio item 2 -->
-                        <div class="col-md-4 col-sm-12 d-flex portfolio-item">
+                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
                             <article class="item">
                                 <h3>Movie Project</h3>
                                 <div class="h-100 pb-5">
-                                <a href="#" class="image"><img class="h-100" src="assets/images/movie_project.jpeg"
-                                                               alt="Movie Project Pair Programming"></a>
+                                    <a href="#" class="image">
+                                        <img class="h-100" src="assets/images/movie_project.jpeg"
+                                             alt="Movie Project Pair Programming"></a>
+                                </div>
+                                <!-- Hidden/click to show -->
+                                <div class="portfolio-info" style="display:none;">
+                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
+                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
+                                    saepe temporibus veniam. Consectetur dolores in repellat?
+                                    <br>
+                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
                                 </div>
                             </article>
                         </div>
                         <!-- Portfolio item 3 -->
-                        <div class="col-md-4 col-sm-12 d-flex portfolio-item">
+                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
                             <article class="item">
                                 <h3>Weather Map</h3>
                                 <div class="h-100 pb-5">
-                                <a href="#" class="image"><img class="h-100" src="assets/images/weather_map.JPG"
-                                                               alt="Weather Map Solo Project"></a>
+                                    <a href="#" class="image">
+                                        <img class="h-100" src="assets/images/weather_map.JPG"
+                                             alt="Weather Map Solo Project"></a>
+                                </div>
+                                <!-- Hidden/click to show -->
+                                <div class="portfolio-info" style="display:none;">
+                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
+                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
+                                    saepe temporibus veniam. Consectetur dolores in repellat?
+                                    <br>
+                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
                                 </div>
                             </article>
                         </div>
@@ -82,7 +109,12 @@
                     <h1 class="text-center mb-4">About Me</h1>
                     <p class="text-center">Hi, I'm Shawn Wilson.</p>
                     <p>
-                        As a Full-Stack Software Developer and Army veteran, I bring a unique perspective and skill set to every project I work on. My passion for technology is matched by my willingness to take on new challenges and learn new technologies. In my portfolio, you can see some of the diverse projects I've developed using a variety of technologies. If you're interested in learning more about my background and experience, please visit the contact section. I'm excited to connect with potential employers and explore opportunities to collaborate on innovative projects.
+                        As a Full-Stack Software Developer and Army veteran, I bring a unique perspective and skill set
+                        to every project I work on. My passion for technology is matched by my willingness to take on
+                        new challenges and learn new technologies. In my portfolio, you can see some of the diverse
+                        projects I've developed using a variety of technologies. If you're interested in learning more
+                        about my background and experience, please visit the contact section. I'm excited to connect
+                        with potential employers and explore opportunities to collaborate on innovative projects.
                     </p>
                     <div class="icon-container">
                         <i class="fab fa-java icon" title="Java" data-bs-toggle="tooltip"
@@ -117,9 +149,11 @@
             <section id="contact" class="parent" style="min-height: 95vh;">
                 <div class="container container-background p-4">
                     <h1 class="text-center mb-4">Contact</h1>
-                    <p>You can visit my social links below to learn more about me. Message me directly by clicking the red message button icon on the bottom right of the screen.</p>
+                    <p>You can visit my social links below to learn more about me. Message me directly by clicking the
+                        red message button icon on the bottom right of the screen.</p>
                     <div class="icon-container">
-                        <a class="text-white" href="https://www.linkedin.com/in/shawnbwilson/" rel="noreferrer" target="_blank">
+                        <a class="text-white" href="https://www.linkedin.com/in/shawnbwilson/" rel="noreferrer"
+                           target="_blank">
                             <i class="fa-brands fa-linkedin icon" title="Linkedin" data-bs-toggle="tooltip"
                                data-bs-placement="bottom"></i>
                         </a>
@@ -127,13 +161,15 @@
                             <i class="fa-brands fa-square-github icon" title="Github" data-bs-toggle="tooltip"
                                data-bs-placement="bottom"></i>
                         </a>
-                        <a class="text-white" href="https://alumni.codeup.com/students/1770" rel="noreferrer" target="_blank">
+                        <a class="text-white" href="https://alumni.codeup.com/students/1770" rel="noreferrer"
+                           target="_blank">
                             <i class="fa-solid fa-user-graduate icon" title="Codeup Alumni" data-bs-toggle="tooltip"
                                data-bs-placement="bottom"></i>
                         </a>
                     </div>
                 </div>
             </section>
+<!--            <img src="assets/images/wireframe.svg" alt="">-->
 
             <footer id="footer" class="d-flex justify-content-center">
                 <div class="d-flex align-items-center">
